# host-static

./: Cargo.toml  README.md
src/: main.rs
