[package]
authors = ["Trent Shailer"]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "host-static"
rust-version = "1.88"
version = "0.2.0"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs"] }
ts-cli-helper = "0.6.0"
ts-rust-helper = { version = "0.7.1", features = ["styled"] }

[lints.rust]
"missing_docs" = "warn"
"unused_qualifications" = "warn"

[lints.clippy]
"as_conversions" = "warn"
"cast_lossless" = "warn"
"dbg" = "warn"
"inconsistent_struct_constructor" = "warn"
"todo" = "warn"
"unnecessary_self_imports" = "warn"
"use_self" = "warn"
